# dotfiles

./: .agignore  .bash_profile  .bashrc  .gitconfig  .gitconfig.sample  .gitignore  .gitignore_global  .tmux.conf  .vimrc  .zprofile  .zshrc  README.md  initDotFiles.sh  todo.txt
.ctags.d/: config.ctags
.vim/: coc-settings.json
.vim/after/: readme.md
.vim/colors/: jellybeans.vim  wombat2.vim
.vim/dicts/: esnext.dict  javascript.dict  node.dict  react.dict  ruby.dict
.vim/ftdetect/: dockerfile.vim  javascript.vim
.vim/ftplugin/: go.vim
.vim/plugin/: grep-operator.vim  omit-closing.vim  open-doc.vim
.vim/rc/: dein.toml  dein_lazy.toml  dein_v7.toml  dein_v8.toml
.vim/snippets/: dart.snip  eruby.snip  javascript.jsx.snip  jinja.snip  ruby.snip  scss.snip  typescript.snip  vim.snip  vue.snip
.vim/splash/: cat.txt  conciergeu_logo.txt  haskell_logo.txt  miku1.txt  miku2.txt  miku3.txt  miku4.txt  vim_intro.txt
.vim/userautoload/: basic.vim  commands.vim  mapping.vim
aa/: silicon-valley-jobs@160.txt  silicon-valley-logo@160.txt
aa/text/: init-unix-sh.txt  init-zsh-sh.txt  install-lib-sh.txt
btt/: primary.bttpreset
claudecode/: settings.json
claudecode/.claude-plugin/: marketplace.json
commands/: bash.sh  bridge.sh  claudecode.sh  dkc-runner.sh  dkcom-create-template.sh  docker.sh  git.sh  index.sh  remove_duplicate_export_path.sh  utils.sh
docker/: Dockerfile.gcc-10.2.0  Dockerfile.golang-1.13.0  Dockerfile.golang-1.14.1  Dockerfile.haskell-8.8  Dockerfile.node-10.18.1  Dockerfile.node-12.7.0  Dockerfile.node-8.12.0  Dockerfile.node-cli  Dockerfile.python-3  Dockerfile.ruby-2.5.0  Dockerfile.ruby-2.6.5  Dockerfile.ruby-2.7.1  Dockerfile.ruby-cli  init.sh
iterm/: com.googlecode.iterm2.plist
karabinar/automatic_backups/: karabiner_20210818.json  karabiner_20210820.json  karabiner_20211011.json  karabiner_20211012.json
karabiner/: karabiner.json
macos/automator/: README.md  set-keyboard-ansi.applescript  set-keyboard-jis.applescript  show-keyboard-layout-config.applescript
macos/btt/: primary.bttpreset
macos/iterm/: com.googlecode.iterm2.plist
macos/terminal/: Material.terminal  Sapphire.terminal
templates/: docker-compose-sync.yml  docker-compose.sh  docker-compose.yml  docker-sync.yml
templates/cpp/: CMakeLists.txt  CMakeLists.txt.in  Dockerfile  Makefile  compile_flags.txt  docker-compose.sh  docker-compose.yml
templates/cpp/test/: test.cpp
templates/docker/: docker-compose-sync.yml  docker-compose.sh  docker-compose.yml  (+1 more)
tempmlates/: docker-compose.yml  docker-sync.yml  prepare-commit-msg
vscode/: extensions.txt  keybindings.json  settings.json  store-extensions.sh
zsh/: .zpreztorc  .zprofile  .zshenv  .zshrc
(+80 files in other folders)
